fix: collapse empty top nav to prevent login page scroll

--- a/packages/framework/esm-styleguide/src/components/_general.scss
+++ b/packages/framework/esm-styleguide/src/components/_general.scss
@@ -52,9 +52,11 @@ body {
 
 #omrs-top-nav-app-container {
   grid-area: topNav;
+  height: 0;
+}
+#omrs-top-nav-app-container:has(> div:not(:empty)) {
   height: var(--omrs-navbar-height);
 }
-
 body {
   display: grid;
   grid-template-areas:
